Expose the socket returned from the ios runtime
The socket returned from the ios runtime can be accessed only from the ios-device-lib. We need a way to expose it.
The solution is to create a server which listnes to a port and when the client application connects to this address we will proxy the messages from the client socket to the device socket and from the device socket to the client socket.

--- a/IOSDeviceLib/IOSDeviceLib.vcxproj
+++ b/IOSDeviceLib/IOSDeviceLib.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="PlistCpp\PlistDate.cpp" />
     <ClCompile Include="PlistCpp\pugixml.cpp" />
     <ClCompile Include="Printing.cpp" />
+    <ClCompile Include="ServerHelper.cpp" />
     <ClCompile Include="SocketHelper.cpp" />
     <ClCompile Include="StringHelper.cpp" />
     <ClCompile Include="windows_impl.cpp" />
@@ -450,6 +451,7 @@
     <ClInclude Include="PlistCpp\pugiconfig.hpp" />
     <ClInclude Include="PlistCpp\pugixml.hpp" />
     <ClInclude Include="Printing.h" />
+    <ClInclude Include="ServerHelper.h" />
     <ClInclude Include="SocketHelper.h" />
     <ClInclude Include="StringHelper.h" />
   </ItemGroup>
