Enable building with Xcode 9.0
It appears Xcode 9.0 does not allow for linking with frameworks, located in `/System/Library/PrivateFrameworks`. As a temporary workaround copy the desired framewok in the project's directory.

--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,6 @@ xcuserdata/
 
 ### VS Code
 .vscode
+
+### The following folder is present because of a workaround for MobileDevice.framework and Xcode 9.0
+.frameworks/*
