feat: add tests for message-unpack-stream
Add tests for message-unpack-stream.
Add mocha, chai and istanbul as devDependencies and ensure tests are run before packing the package. Ignore test specific files from the npm package and coverage files from git.

--- a/.gitignore
+++ b/.gitignore
@@ -275,7 +275,12 @@ xcuserdata/
 .DS_Store
 
 ### VS Code
-.vscode
+.vscode/**/*
+!.vscode/launch.json
 
 ### The following folder is present because of a workaround for MobileDevice.framework and Xcode 9.0
 .frameworks/*
+
+### Node.js files
+coverage/
+*.tgz
