fix: fix setTimeout and clearTimeout functions
* clear connection from dictionary when invalidating it
* add mutex while cleaning the connection

--- a/IOSDeviceLib/IOSDeviceLib.vcxproj
+++ b/IOSDeviceLib/IOSDeviceLib.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="PlistCpp\pugixml.cpp" />
     <ClCompile Include="Printing.cpp" />
     <ClCompile Include="ServerHelper.cpp" />
+    <ClCompile Include="SetTimeout.cpp" />
     <ClCompile Include="SocketHelper.cpp" />
     <ClCompile Include="StringHelper.cpp" />
     <ClCompile Include="windows_impl.cpp" />
@@ -454,6 +455,7 @@
     <ClInclude Include="PlistCpp\pugixml.hpp" />
     <ClInclude Include="Printing.h" />
     <ClInclude Include="ServerHelper.h" />
+    <ClInclude Include="SetTimeout.h" />
     <ClInclude Include="SocketHelper.h" />
     <ClInclude Include="StringHelper.h" />
   </ItemGroup>
