--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ios-device-lib",
-  "version": "0.7.3",
+  "version": "0.8.0-rc.1",
   "description": "",
   "types": "./typings/ios-device-lib.d.ts",
   "main": "index.js",
