--- a/IOSDeviceLib/configuration.xcconfig
+++ b/IOSDeviceLib/configuration.xcconfig
@@ -1,2 +1,2 @@
-CONFIGURATION_BUILD_DIR = $(SRCROOT)/bin/darwin/x64
-BUILT_PRODUCTS_DIR = $(SRCROOT)/bin/darwin/x64
+CONFIGURATION_BUILD_DIR = $(SRCROOT)/bin/darwin
+BUILT_PRODUCTS_DIR      = $(SRCROOT)/bin/darwin
